<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="com.ece420.lab4.MainActivity">



    <Button
        android:id="@+id/capture_control_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StartEcho"
        android:onClick="onEchoClick"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GetParam"
        android:id="@+id/get_parameter_button"
        android:layout_above="@+id/statusView"
        android:layout_alignParentStart="true"
        android:onClick="getLowLatencyParameters" />

    <TextView android:text="@string/init_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="3"
        android:id="@+id/statusView"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:id="@+id/statusViewAlg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:lines="3"
        android:text="@string/algo_selected" />

    <TextView
        android:id="@+id/textFrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="Unvoiced"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        android:textSize="36sp" />

    <LinearLayout
        android:id="@+id/change_activity_main_prerecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/prerecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onChangeActivityClick"
            android:text="@string/change_activity_text" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/algorithms_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_activity_main_prerecord"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="120px"
        android:orientation="horizontal">


        <Button
            android:id="@+id/CEP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onCEPClick"
            android:text="CEP" />

        <Button
            android:id="@+id/PPROC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onPPROCClick"
            android:text="PPROC" />

        <Button
            android:id="@+id/SIFT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSIFTClick"
            android:text="SIFT" />

        <Button
            android:id="@+id/AUTOC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onAUTOCClick"
            android:text="AUTOC" />
    </LinearLayout>


</RelativeLayout>

